Dara: Fix My Account buttons spacing issue. See #28.

--- a/dara/woocommerce-rtl.css
+++ b/dara/woocommerce-rtl.css
@@ -12,46 +12,6 @@
  */
 /**
  * Deprecated
- * Vendor prefix no longer required.
- */
-/**
- * Deprecated
- * Vendor prefix no longer required.
- */
-/**
- * Deprecated
- * Vendor prefix no longer required.
- */
-/**
- * Deprecated
- * Vendor prefix no longer required.
- */
-/**
- * Deprecated
- * Vendor prefix no longer required.
- */
-/**
- * Deprecated
- * Vendor prefix no longer required.
- */
-/**
- * Deprecated
- * Vendor prefix no longer required.
- */
-/**
- * Deprecated
- * Vendor prefix no longer required.
- */
-/**
- * Deprecated
- * Vendor prefix no longer required.
- */
-/**
- * Deprecated
- * Vendor prefix no longer required.
- */
-/**
- * Deprecated
  * Use bourbon mixin instead `@include transform(scale(1.5));`
  */
 /**
@@ -3290,6 +3250,13 @@ form .form-row-wide {
 .woocommerce-account .woocommerce-MyAccount-content {
   float: left;
   width: 68%;
+}
+
+.woocommerce-account .woocommerce-MyAccount-content table .button {
+  word-wrap: normal;
+  word-break: normal;
+  display: inline-block;
+  margin: .25em;
 }
 
 @media screen and (min-width: 1000px) {
